# glrenderer

./: .gitignore  CMakeLists.txt  README.md  Shader.cpp  Shader.h  glad.c  glrenderer.sln  glrenderer.vcxproj  glrenderer.vcxproj.filters  main.cpp
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
src/modelimport/: Directory.cpp  Directory.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/primitives/: cube.h  framebufferfill.h  plane.h  skybox.h  verticalplane.h
src/shaders/: cubemap.fs  cubemap.vs  fragment.fs  fragment_point.fs  fragment_spot.fs  lightSource.fs  lightSource.vs  mirror.fs  mirror.vs  model.fs  model.gs  model.vs  shadowmap.fs  shadowmap.vs  singlecolor.fs  vertex.glsl  vertex.vs
